; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ldns/extr_util.c_ldns_mktime_from_utc.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ldns/extr_util.c_ldns_mktime_from_utc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32, i32, i32, i32, i32, i32 }

@mdays = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ldns_mktime_from_utc(%struct.tm* %0) #0 {
  %2 = alloca %struct.tm*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.tm* %0, %struct.tm** %2, align 8
  %9 = load %struct.tm*, %struct.tm** %2, align 8
  %10 = getelementptr inbounds %struct.tm, %struct.tm* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = add nsw i32 1900, %11
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  %14 = sub nsw i32 %13, 1970
  %15 = mul nsw i32 365, %14
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @leap_days(i32 1970, i32 %16)
  %18 = add nsw i32 %15, %17
  store i32 %18, i32* %4, align 4
  store i32 0, i32* %8, align 4
  br label %19

19:                                               ; preds = %35, %1
  %20 = load i32, i32* %8, align 4
  %21 = load %struct.tm*, %struct.tm** %2, align 8
  %22 = getelementptr inbounds %struct.tm, %struct.tm* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = icmp slt i32 %20, %23
  br i1 %24, label %25, label %38

25:                                               ; preds = %19
  %26 = load i64*, i64** @mdays, align 8
  %27 = load i32, i32* %8, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i64, i64* %26, i64 %28
  %30 = load i64, i64* %29, align 8
  %31 = load i32, i32* %4, align 4
  %32 = sext i32 %31 to i64
  %33 = add nsw i64 %32, %30
  %34 = trunc i64 %33 to i32
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %25
  %36 = load i32, i32* %8, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %8, align 4
  br label %19

38:                                               ; preds = %19
  %39 = load %struct.tm*, %struct.tm** %2, align 8
  %40 = getelementptr inbounds %struct.tm, %struct.tm* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = icmp sgt i32 %41, 1
  br i1 %42, label %43, label %50

43:                                               ; preds = %38
  %44 = load i32, i32* %3, align 4
  %45 = call i64 @is_leap_year(i32 %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %50

47:                                               ; preds = %43
  %48 = load i32, i32* %4, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %4, align 4
  br label %50

50:                                               ; preds = %47, %43, %38
  %51 = load %struct.tm*, %struct.tm** %2, align 8
  %52 = getelementptr inbounds %struct.tm, %struct.tm* %51, i32 0, i32 2
  %53 = load i32, i32* %52, align 4
  %54 = sub nsw i32 %53, 1
  %55 = load i32, i32* %4, align 4
  %56 = add nsw i32 %55, %54
  store i32 %56, i32* %4, align 4
  %57 = load i32, i32* %4, align 4
  %58 = mul nsw i32 %57, 24
  %59 = load %struct.tm*, %struct.tm** %2, align 8
  %60 = getelementptr inbounds %struct.tm, %struct.tm* %59, i32 0, i32 3
  %61 = load i32, i32* %60, align 4
  %62 = add nsw i32 %58, %61
  store i32 %62, i32* %5, align 4
  %63 = load i32, i32* %5, align 4
  %64 = mul nsw i32 %63, 60
  %65 = load %struct.tm*, %struct.tm** %2, align 8
  %66 = getelementptr inbounds %struct.tm, %struct.tm* %65, i32 0, i32 4
  %67 = load i32, i32* %66, align 4
  %68 = add nsw i32 %64, %67
  store i32 %68, i32* %6, align 4
  %69 = load i32, i32* %6, align 4
  %70 = mul nsw i32 %69, 60
  %71 = load %struct.tm*, %struct.tm** %2, align 8
  %72 = getelementptr inbounds %struct.tm, %struct.tm* %71, i32 0, i32 5
  %73 = load i32, i32* %72, align 4
  %74 = add nsw i32 %70, %73
  store i32 %74, i32* %7, align 4
  %75 = load i32, i32* %7, align 4
  ret i32 %75
}

declare dso_local i32 @leap_days(i32, i32) #1

declare dso_local i64 @is_leap_year(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
